# Rust-opencv-Application

./: .gitignore  Cargo.toml  README.md
src/: camera.rs  folder.rs  main.rs  resources.rs  stream.rs
src/camera/: detect.rs  tools.rs
src/resources/: consts.rs  detection.rs  tools.rs
src/stream/: detect.rs  detection.rs  tools.rs
